--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
   },
   "homepage": "https://github.com/devs-arg/faq/",
   "dependencies": {
-    "next": "13.4.4",
-    "next-seo": "^6.0.0",
-    "nextra": "2.7.1",
-    "nextra-theme-docs": "2.7.1",
+    "next": "13.5.3",
+    "next-seo": "6.1.0",
+    "nextra": "2.13.1",
+    "nextra-theme-docs": "2.13.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.16.0",
-    "typescript": "5.1.3"
+    "@types/node": "20.8.0",
+    "typescript": "5.2.2"
   }
 }
