Add Devenv/Nix Enviroment

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Next
 .next
 out
 node_modules
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
